# Problem_Solving

./: BagInterface.h  CMakeLists.txt  compile_commands.json
C++_Concurrency_in_Action/: CMakeLists.txt
C++_Concurrency_in_Action/ch02_managing_threads/: CMakeLists.txt  main.cpp  parallel_accumulate.hpp
C_C++_fundamental/: CMakeLists.txt  client.txt  different_print_function.cpp
C_C++_fundamental/ADT_implementation_in_C/: main_generic_compare.cpp
C_C++_fundamental/basics/: memory_allignment.cpp  prefix_and_postfix_operator.cpp
C_C++_fundamental/basics/ADT_implementation_in_C/: main_generic_compare.cpp
C_C++_fundamental/container_and_literator/: fig15_04.cpp  fig15_10.cpp  fig15_11.cpp  fig15_13.cpp  fig15_14.cpp  fig15_19.cpp  fig15_21.cpp
C_C++_fundamental/file_processing/: fig14_03.cpp  fig14_06.cpp
C_C++_fundamental/file_processing/credit_processing_program/: clientdata.cpp  clientdata.hpp  main.cpp
C_C++_fundamental/operator_overloading/binary_operator_overloading_as_nonmember_function/: main.cpp  phonenumber.cpp  phonenumber.hpp
C_C++_fundamental/operator_overloading/demo_operator_overloading_with_custom_class/: array.cpp  array.hpp  main.cpp
C_C++_fundamental/operator_overloading/unary_operator_overloading_as_member_function/: date.cpp  date.hpp
C_C++_fundamental/standard_algorithm/: fig16_01.cpp  fig16_02.cpp  fig16_03.cpp  fig16_04.cpp  fig16_08.cpp
C_C++_fundamental/stream_input_and_output/: stream_input_main.cpp
C_C++_fundamental/stream_input_and_output/stream_manipulators/: widthValue_main.cpp
C_C++_fundamental/unary_operator_overloading_as_member_function/: main.cpp
Data_Structure_and_Algorithms/: CMakeLists.txt
Data_Structure_and_Algorithms/double_linked_list/: doublelinkedlist.cpp  doublelinkedlist.hpp  main.cpp
GTK+_Development/: CMakeLists.txt  hello_world.cpp
LeetCode/: CMakeLists.txt  LeetCode.cpp  LeetCode.hpp  leetcode.cpp  leetcode.hpp  main.cpp  sorting_main.cpp
LeetCode/list/: List.cpp  List.hpp  main_custom_list.cpp
Networking_with_Boost/: CMakeLists.txt
Networking_with_Boost/ch01/: activeSocket.cpp  clientEndpoint.cpp  passiveSocket.cpp  resolveDNS.cpp  serverEndpoint.cpp
Numberical_Methods_for_Engineers/: CMakeLists.txt
Numberical_Methods_for_Engineers/ch02/: ch02_main.cpp
Numberical_Methods_for_Engineers/ch03_approximation_and_round_off_error/: main.cpp
Numberical_Methods_for_Engineers/common/: common.hpp
ch01_03_interface_and_template_and_inheritance/: ArrayBag.h  CMakeLists.txt  main.cpp
ch04_link-based_implementations/: ArrayBag.h  CMakeLists.txt  LinkedBag.h  Node.h  main.cpp
ch05_recursion_problems/: Board.cpp  Board.h  CMakeLists.txt  Queen.cpp  Queen.h  lib.cpp  lib.h  main.cpp
ch06_stacks/: CMakeLists.txt
ch07_stack_implementations/: ArrayStack.cpp  ArrayStack.h  CMakeLists.txt  main.cpp
ch15_tree/: BinaryNode.hpp  BinaryNodeTree.hpp  BinarySearchTree.hpp  CMakeLists.txt  binarytreeinterface.hpp  main_test.cpp
chapter01_c++_interlude_01/: CMakeLists.txt  MagicBox.h  PlainBox.h  ToyBox.cpp  main.cpp
chapter03_array-based_implementations/: ArrayBag.cpp  ArrayBag.h  CMakeLists.txt  main.cpp
class_Inheritance/: RatedPlayer.cpp  RatedPlayer.h  TableTennisPlayer.cpp  TableTennisPlayer.h  dma.cpp  dma.h  main.cpp  main_dma.cpp
class_Inheritance/virtual_methods_in_class/: Brass.cpp  Brass.h  BrassPlus.cpp  BrassPlus.h  main.cpp
class_template/: main.cpp  stacktp.cpp  stacktp.h
classes_and_dynamic_memeory_allocation/: CMakeLists.txt  StringBag.h
common/: common.cpp  common.hpp
design_pattern/: CMakeLists.txt  producer_and_consumer.cpp
interface_and_template_and_inheritance/: ArrayBag.cpp  BagInterface.h
interfaces/: BagInterface.h  StackInterface.h
interlude_01_C++_classes/: CMakeLists.txt  MagicBox.cpp  MagicBox.h  PlainBox.h  StringBag.cpp  ToyBox.cpp  ToyBox.h  demo_magicbox.cpp  demo_plainbox.cpp  demo_toybox.cpp  demo_why_declare_method_as_virtual.cpp  main.cpp
interlude_02_pointers_polymorphism_and_memory_allocation/: ArrayBag.cpp  ArrayBag.h  CMakeLists.txt  GoodMemory.cpp  GoodMemory.h  PlainBox.cpp  PlainBox.h  a_problem_main.cpp  demo_problem_of_early_binding.cpp  demo_problem_of_type_is_determined_during_compile.cpp  demo_shows_good_practise_of_good_memory.cpp  demo_shows_late_binding.cpp  demo_shows_using_new_operator_to_allocate_memory_on_heap.cpp  dome_shows_resizable_array.cpp  main.cpp
interlude_03_exceptions/: CMakeLists.txt  demo_of_using_exceptions.cpp
interview/basic/: big_and_little_endian.cpp
tmp/: BoxInterface.h  CMakeLists.txt  MagicBox.cpp  PlainBox.cpp  PlainBox.h  ToyBox.h  playground.cpp
